Redo how bundles are done
